--- a/main/css/main.css
+++ b/main/css/main.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "arial", "san-seriff";
 }
 body {
   background-color: whitesmoke;
